# rules_intellij

./: BUILD  MODULE.bazel  maven_install.json  projectview.bazelproject
aspect/tools/: BUILD
build_defs/: build_defs.bzl  intellij_plugin.bzl  stamp_plugin_xml.py
intellij_platform_sdk/: BUILD  BUILD.idea241  BUILD.idea242  BUILD.ue241  BUILD.ue242
testing/: BUILD  test_defs_kt.bzl
testing/src/com/google/idea/testing/: BlazeTestSystemProperties.java  IntellijJunit5Extension.java  IntellijJunit5TestExecutionListener.java
