module(
    name = "rules_intellij",
    bazel_compatibility = [">=7.0.0"],
)

bazel_dep(
    name = "platforms",
    version = "0.0.8",
)
bazel_dep(
    name = "rules_java",
    version = "7.4.0",
)
bazel_dep(
    name = "rules_python",
    version = "0.31.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12", "python_versions")

bazel_dep(
    name = "rules_proto",
    version = "5.3.0-21.7",
)
bazel_dep(
    name = "protobuf",
    version = "21.7",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
)

remote_android_extensions = use_extension("@bazel_tools//tools/android:android_extensions.bzl", "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.23.0",
    dev_dependency = True,
)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version = "5.4.1")
bazel_binaries.download(version = "6.5.0")
bazel_binaries.download(version = "7.0.2")
use_repo(
    bazel_binaries,
    "bazel_binaries",
    "bazel_binaries_bazelisk",
    "build_bazel_bazel_5_4_1",
    "build_bazel_bazel_6_5_0",
    "build_bazel_bazel_7_0_2",
)

bazel_dep(name = "rules_jvm_external", version = "6.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "rules_intellij_maven",
    artifacts = [
        "com.google.errorprone:error_prone_annotations:2.20.0",
    ],
    fail_if_repin_required = True,
    generate_compat_repositories = True,
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "rules_intellij_maven",
    error_prone_annotations = "com_google_errorprone_error_prone_annotations",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# The plugin api for intellij_ce_2024_1. This is required to build IJwB and run integration tests.
IC_241_SHA = "456805da1a95f98b8bd7b26ee2b49705ef1656598d438889ee4cc18099e87928"

IC_241_URL = "https://www.jetbrains.com/intellij-repository/releases/com/jetbrains/intellij/idea/ideaIC/2024.1.2/ideaIC-2024.1.2.zip"

http_archive(
    name = "intellij_ce_2024_1",
    build_file = "@rules_intellij//intellij_platform_sdk:BUILD.idea241",
    sha256 = IC_241_SHA,
    url = IC_241_URL,
)

# The plugin api for intellij_ce_2024_2. This is required to build IJwB and run integration tests.
IC_242_SHA = "a20df4b2fb9c96a2943db019807d9e0da57c0db28544cbd7dbb3c40818e2bbfd"

IC_242_URL = "https://www.jetbrains.com/intellij-repository/snapshots/com/jetbrains/intellij/idea/ideaIC/242.12881.66-EAP-SNAPSHOT/ideaIC-242.12881.66-EAP-SNAPSHOT.zip"

http_archive(
    name = "intellij_ce_2024_2",
    build_file = "@rules_intellij//intellij_platform_sdk:BUILD.idea242",
    sha256 = IC_242_SHA,
    url = IC_242_URL,
)

DEVKIT_BUILD_FILE = """
java_import(
    name = "devkit",
    jars = ["devkit/lib/devkit.jar"],
    visibility = ["//visibility:public"],
)
"""

DEVKIT_241_SHA = "7fbabd16a4b8b66de40a3fac80ea927dc44c1f5234b829b5dfb082f0b8de4cc2"

DEVKIT_241_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/DevKit/241.17011.92/DevKit-241.17011.92.zip"

http_archive(
    name = "devkit_2024_1",
    build_file_content = DEVKIT_BUILD_FILE,
    sha256 = DEVKIT_241_SHA,
    url = DEVKIT_241_URL,
)

DEVKIT_242_SHA = "e6eb3d2409581f74dda654db30003f98c7913a17887ee9caf3aa7d551ed0a354"

DEVKIT_242_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/DevKit/242.12881.66/DevKit-242.12881.66.zip"

http_archive(
    name = "devkit_2024_2",
    build_file_content = DEVKIT_BUILD_FILE,
    sha256 = DEVKIT_242_SHA,
    url = DEVKIT_242_URL,
)

_PYTHON_CE_BUILD_FILE = """
java_import(
    name = "python",
    jars = ["python-ce/lib/python-ce.jar"],
    visibility = ["//visibility:public"],
)
filegroup(
  name = "python_helpers",
  srcs = glob(["python-ce/helpers/**/*"]),
  visibility = ["//visibility:public"],
)
"""

PYTHON_PLUGIN_241_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/PythonCore/241.17011.48/PythonCore-241.17011.48.zip"

PYTHON_PLUGIN_241_SHA = "f0d1a93979a9aa650250ee46d3b21038f7b37c2c02f17ab879fc188c29a54592"

http_archive(
    name = "python_2024_1",
    build_file_content = _PYTHON_CE_BUILD_FILE,
    sha256 = PYTHON_PLUGIN_241_SHA,
    url = PYTHON_PLUGIN_241_URL,
)

_PYTHON_CE_242_BUILD_FILE = """
java_import(
    name = "python",
    jars = glob(["python-ce/lib/*.jar", "python-ce/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
filegroup(
  name = "python_helpers",
  srcs = glob(["python-ce/helpers/**/*"]),
  visibility = ["//visibility:public"],
)
"""

PYTHON_PLUGIN_242_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/PythonCore/242.12881.66/PythonCore-242.12881.66.zip"

PYTHON_PLUGIN_242_SHA = "297463c5f43ff2e4410e071ff469a7d4a80e6a961bf6d4c7578a7065906c8181"

http_archive(
    name = "python_2024_2",
    build_file_content = _PYTHON_CE_242_BUILD_FILE,
    sha256 = PYTHON_PLUGIN_242_SHA,
    url = PYTHON_PLUGIN_242_URL,
)

_ANDRIOD_PLUGIN_BUILD_FILE = """
java_import(
    name = "android",
    jars = glob(["android/lib/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

ANDROID_PLUGIN_241_URL = "https://downloads.marketplace.jetbrains.com/files/22989/544295/android-241.17011.79.zip"

http_archive(
    name = "android_2024_1",
    build_file_content = _ANDRIOD_PLUGIN_BUILD_FILE,
    url = ANDROID_PLUGIN_241_URL,
)

ANDROID_PLUGIN_242_URL = "https://downloads.marketplace.jetbrains.com/files/22989/553177/android-242.15523.18.zip"

http_archive(
    name = "android_2024_2",
    build_file_content = _ANDRIOD_PLUGIN_BUILD_FILE,
    url = ANDROID_PLUGIN_242_URL,
)
